k8s/redis-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-lb
  namespace: redis
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  loadBalancerSourceRanges:
    - 71.195.228.50/32
