k8s/traefik-no-www.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-www
spec:
  redirectRegex:
    regex: "^https://www\\.(.+)"
    replacement: "https://$1"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: no-www
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`www.(.+)`)
      kind: Rule
      middlewares:
        - name: no-www
      services:
        - name: noop-service
          kind: Service
          port: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: noop-service
spec:
  ports:
    - port: 9999
      targetPort: 9999
  clusterIP: None
