k8s/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hybridocr-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hybridocr-website
  template:
    metadata:
      labels:
        app: hybridocr-website
    spec:
      containers:
      - name: hybridocr-website
        image: us-west3-docker.pkg.dev/ageless-math-433804-h9/hybridocr/hybridocr_website
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /secret/config.json
          subPath: config.json
          readOnly: true
      volumes:
      - name: config-volume
        secret:
          secretName: config
---
apiVersion: v1
kind: Service
metadata:
  name: hybridocr-website-service
  labels:
    app: hybridocr-website
spec:
  type: ClusterIP
  selector:
    app: hybridocr-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hybridocr-website-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "hybridocr.com"
    - "*.hybridocr.com"
    secretName: hybridocr-tls
  rules:
  - host: "hybridocr.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hybridocr-website-service
            port:
              number: 80
  - host: "*.hybridocr.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hybridocr-website-service
            port:
              number: 80
